Changelog
=========

Version 0.2.3
-------------

(released on 2017-08-01)

* Fix unicode error on Python 2 with newlines in output row.
* Fixes to accept iterator.


Version 0.2.2
-------------

(released on 2017-07-16)

* Fix IndexError from being raised with uneven rows.


Version 0.2.1
-------------

(released on 2017-07-11)

* Run tests on macOS via Travis.
* Fix unicode issues on Python 2 (csv and styling output).


Version 0.2.0
-------------

(released on 2017-06-23)

* Make vertical table separator more customizable.
* Add format numbers preprocessor.
* Add test coverage reports.
* Add ability to pass additional preprocessors when formatting output.
* Don't install tests.tabular_output.
* Add .gitignore
* Coverage for tox tests.
* Style formatted output with Pygments (optional).
* Fix issue where tabulate can't handle ANSI escape codes in default values.
* Run tests on Windows via Appveyor.


Version 0.1.0
-------------

(released on 2017-05-01)

* Pretty print tabular data using a variety of formatting libraries.