@@ -1,6 +1,11 @@
 Changelog
 =========
 
+TBD
+---
+
+* Output as generator
+
 Version 0.2.3
 -------------
 
